# ai-scheduler

./: calendar_utils.py  main.py  pyproject.toml  scheduler.py  style.css
