[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "icalendar>=6.1.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.43.1",
]
